# HavokLib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HavokLib.sln  HavokLib.vcxproj  HavokLib.vcxproj.filters  README.md
.github/workflows/: cmake.yml  release.yml
_samples/: BaseTesting.h  CMakeLists.txt  HavokLibSamples.cpp  HavokLibSamples.vcxproj  HavokLibSamples.vcxproj.filters  InterleavedTesting.h  SkeletonTesting.h
classgen/: CMakeLists.txt  hk_base.py  hk_class.py  hk_rootlevelcontainer.py  hka_animated_reference_frame.py  hka_animated_reference_frame_default.py  hka_animation.py  hka_animation_binding.py  hka_animation_container.py  hka_animation_delta.py  hka_animation_interleaved.py  hka_animation_spline.py  hka_animation_wavelet.py  hka_bone_attachment.py  hka_mesh_binding.py  hka_ragdoll_instance.py  hka_skeleton.py  hka_skeleton_mapper.py  hkx_attribute_holder.py  hkx_environment.py  hkx_material.py  hkx_mesh.py  hkx_scene.py
classgen/custom/: hka_animation_lossless_compressed.py
doc/: diag.puml
include/: HavokApi.hpp  HavokXMLApi.hpp  havok_api.hpp  havok_xml.hpp  hkInternalInterfaces.h
include/hklib/: hk_base.hpp  hk_packfile.hpp  hk_rootlevelcontainer.hpp  hk_settings.hpp  hka_animatedreferenceframe.hpp  hka_animation.hpp  hka_animationbinding.hpp  hka_animationcontainer.hpp  hka_annotationtrack.hpp  hka_boneattachment.hpp  hka_meshbinding.hpp  hka_skeleton.hpp  hkx_attributeholder.hpp  hkx_environment.hpp  hkx_material.hpp  hkx_mesh.hpp  hkx_scene.hpp
include/internal/: hk_internal_api.hpp  hk_rootlevelcontainer.hpp  hka_animatedreferenceframe.hpp  hka_animation.hpp  hka_animationbinding.hpp  hka_animationcontainer.hpp  hka_annotationtrack.hpp  hka_defaultanimrefframe.hpp  hka_deltaanimation.hpp  hka_interleavedanimation.hpp  hka_meshbinding.hpp  hka_skeleton.hpp  hka_splineanimation.hpp  hka_waveletanimation.hpp  hkx_attributeholder.hpp  hkx_environment.hpp  hkx_material.hpp  hkx_mesh.hpp  hkx_scene.hpp
include/internal/custom/: hka_losslesscompressedanimation.hpp
python/: CMakeLists.txt  hk_core.hpp  hk_packfile.cpp  hk_packfile.hpp  hk_rootlevelcontainer.cpp  hk_rootlevelcontainer.hpp  hka_animationcontainer.cpp  hka_animationcontainer.hpp  hka_skeleton.cpp  hka_skeleton.hpp  hkx_environment.cpp  hkx_environment.hpp  module.cpp  project.h
source/: CMakeLists.txt  core_motion.cpp  core_registry.cpp  fixups.hpp  format_new.cpp  format_new.hpp  format_old.cpp  format_old.hpp  hkBin2XML.cpp  hkCore.cpp  hkHeader.cpp  hkHeader.hpp  hkNewHeader.cpp  hkNewHeader.h  hkObjectBase.h  hkReflectorUtil.h  hkRegistry.cpp  hkRootLevelContainer.cpp  hkRootLevelContainer.h  hkXML.h  hk_packfile.cpp  hkaAnimatedReferenceFrame.h  hkaAnimation.h  hkaAnimationBinding.cpp  hkaAnimationBinding.h  hkaAnimationContainer.cpp  hkaAnimationContainer.h  hkaAnnotation.h  hkaDecompressor.h  hkaDefaultAnimatedReferenceFrame.cpp  hkaDefaultAnimatedReferenceFrame.h  hkaDeltaCompressedAnimation.cpp  hkaDeltaCompressedAnimation.h  hkaDeltaDecompressor.cpp  hkaDeltaDecompressor.h  hkaInterleavedAnimation.cpp  hkaInterleavedAnimation.h  hkaSkeleton.cpp  hkaSkeleton.h  hkaSplineCompressedAnimation.cpp  (+15 more)
source/packfile/: base.hpp  hk_base.inl  hk_rootlevelcontainer.cpp  hk_rootlevelcontainer.inl  hka_animated_reference_frame.hpp  hka_animated_reference_frame.inl  hka_animated_reference_frame_default.cpp  hka_animated_reference_frame_default.inl  hka_animatedreferenceframe.hpp  hka_animation.hpp  hka_animation.inl  hka_animation_binding.cpp  hka_animation_binding.inl  hka_animation_container.cpp  hka_animation_container.inl  hka_animation_delta.cpp  hka_animation_delta.inl  hka_animation_interleaved.cpp  hka_animation_interleaved.inl  hka_animation_spline.cpp  hka_animation_spline.inl  hka_animation_wavelet.cpp  hka_animation_wavelet.inl  hka_animationbinding.cpp  hka_animationcontainer.cpp  hka_annotationtrack.hpp  hka_defaultanimrefframe.cpp  hka_deltaanimation.cpp  hka_interleavedanimation.cpp  hka_mesh_binding.cpp  hka_mesh_binding.inl  hka_skeleton.cpp  hka_skeleton.inl  hka_splineanimation.cpp  hka_waveletanimation.cpp  hkx_attribute_holder.hpp  hkx_attribute_holder.inl  hkx_environment.cpp  hkx_environment.inl  hkx_material.cpp  (+7 more)
source/packfile/custom/: hka_animation_lossless_compressed.inl  hka_losslesscompressedanimation.cpp
source/xml/: base.cpp  base.hpp  hk_rootlevelcontainer.cpp  hk_rootlevelcontainer.inl  hka_animation.cpp  hka_animation.inl  hka_animationbinding.cpp  hka_animationbinding.inl  hka_animationcontainer.cpp  hka_animationcontainer.inl  hka_annotationtrack.cpp  hka_annotationtrack.inl  hka_interleavedanimation.cpp  hka_interleavedanimation.inl  hka_meshbinding.cpp  hka_skeleton.cpp  hka_skeleton.inl  hkx_attributeholder.cpp  hkx_environment.cpp  hkx_environment.inl  hkx_material.cpp  hkx_mesh.cpp  hkx_scene.cpp
test/: CMakeLists.txt  gen_graph.cpp  havok.py  resources.tar.zst  test.cpp  test.hpp  test_common.cpp  test_common.inl  test_defaultmotion.cpp  test_defaultmotion.inl  test_delta.cpp  test_delta.inl  test_interleaved.cpp  test_interleaved.inl  test_mesh.cpp  test_sample.cpp  test_sample.inl  test_scene.cpp  test_skeleton.cpp  test_skeleton.inl  test_spline.cpp  test_spline.inl  test_wavelet.cpp  test_wavelet.inl  test_xml.cpp  test_xml.inl
test/compiled_resources/: CMakeLists.txt  resources_mesh.tar.zst  resources_visual.tar.zst  resources_wavelet.tar.zst
toolset/: CMakeLists.txt  README.md  doc_template.xml  sign_key.asc
toolset/gltf/: CMakeLists.txt  hk_to_gltf.cpp  icosphere.hpp
